nav spacing issues

--- a/_includes/css/general.css
+++ b/_includes/css/general.css
@@ -77,7 +77,10 @@ a:focus {
 
 nav a:hover,
 nav a:focus,
-nav a:active {
+nav a:active,
+footer a:hover,
+footer a:focus,
+footer a:active {
   background-color: #FFF;
 }
 
@@ -88,11 +91,7 @@ nav a:active {
   display: block;
 }
 */
-.logo {
-  font-size: 1.75em;
-  color: #6b89c5;
-  font-weight: bold;
-}
+
 
 .nav-bg {
     background-color: #eae8e4;
@@ -110,13 +109,26 @@ footer a {
   text-align: center;
   display: block;
   padding-bottom: 4%;
-  padding-top: 0;
+  padding-top: 0%;
   width: 100%;
-
-/*  border: 1px solid red;*/
 }
+
+.logo {
+  font-size: 1.75em;
+  color: #6b89c5;
+  font-weight: bold;
+  padding-left: 2%;
+  margin-top: 0%;
+}
+
+/*nav a .logo:hover {
+  background-color: #eae8e4;
+}*/
+/*  border: 1px solid red;*/
+
 li {
   list-style-type: none;
+  margin-left: -15%;
 
 }
 
@@ -130,19 +142,23 @@ li {
 .drop-down li:hover ul {
   display: block;
   left: auto;
-  width: 25%;
+  width: 90%;
   text-decoration: none;
   text-align: center;
 }
 
 .footer-p {
-  padding: 2% 20% 1% 20%;
+  padding: 2% 0% 1% 0%;
   display: inline-block;
   font-size: .5em;
   color: #19459c;
   text-align: center;
   background: none;
-  margin: 0;
+}
+
+.center-footer {
+  width: 100%;
+  padding-left: 32%;
 }
 
 
@@ -156,14 +172,15 @@ a .read-on-link:visited {
   color: #000;
 }
 
-/* Content */
 
+
+
+
+/* Content */
 /* Images */
 
 img {
   width: 100%;
-/*  margin-left: -5%;
-  margin-right: -5%;*/
 }
 
 .bucket-img {
@@ -192,7 +209,7 @@ h2 {
 }
 
 h3 {
-  padding: 0% 2%;
+  padding: 0% 2% 1% 2%;
   margin-top: -0.5%;
 }
 
@@ -252,12 +269,34 @@ footer a {
   padding-top: 2%;
 }
 
+li {
+  margin-left: -20%;
+}
+
+.drop-down li:hover ul {
+  width: 40%;
+  margin-left: 3.3%;
+}
+
 }
 
 @media only screen and (min-width: 38em) {
 
 .nav-bg {
   margin-bottom: 0;
+}
+
+li {
+  margin-left: -28%;
+}
+
+.drop-down li:hover ul {
+  width: 25%;
+  margin-left: 1%;
+}
+
+h3 {
+  padding: 0% 2% 2% 2%;
 }
 
 .img-left {
@@ -285,9 +324,17 @@ footer a {
 .nav-btn {
   padding-top: 0%;
 }
+
+.drop-down li:hover ul {
+  width: 25%;
+  margin-left: -2%;
+}
+
 .unit-img {
   padding-top: 4%;
 }
+
+
 
 }
 
@@ -301,12 +348,21 @@ footer a {
   padding-top: 0%;
 }
 
+.logo {
+  margin-top: 2.2%;
+}
+
+.drop-down li:hover ul {
+  width: 20%;
+  margin-left: -1%;
+}
+
 .img-top-right {
-  margin-top: 0%;
+  margin-top: 2%;
   margin-left: 2.5%;
 }
 .img-top-left {
-  margin-top: 0%;
+  margin-top: 2%;
   padding-right: 2%;
 }
 .img-left {
@@ -343,16 +399,16 @@ html {
   padding-top: -3%;
 }
 .img-top-right {
-  margin-top: 0%;
+  margin-top: 2%;
 }
 .img-top-left {
-  margin-top: 0%;
+  margin-top: 2%;
 }
 .img-left {
-  padding-top: 0%;
+  padding-top: 2%;
 }
 
 .img-right {
-  padding-top: 0%;
+  padding-top: 2%;
 }
 }
